--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
 
-addopts = --doctest-modules
+addopts =
+    --doctest-modules
+#    --doctest-continue-on-failure
+
+doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE
 
 norecursedirs = .git examples docs
 
