--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
-addopts =
-    --doctest-modules
+#addopts =
+#    --doctest-modules
 #    --doctest-continue-on-failure
 
 doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE
